// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VirtualTrashcan snapshots > renders empty state with no items 1`] = `
<div>
  <div
    class="flex gap-3 w-full"
  >
    <div
      class="flex-1 flex flex-col rounded-2xl border-2 border-gray-300 bg-gray-50 overflow-hidden"
    >
      <div
        class="flex items-center justify-center gap-1 py-2 text-sm font-semibold text-gray-700"
      >
        <span>
          🗑️
        </span>
        <span>
          Trash
        </span>
      </div>
      <div
        class="relative h-2 bg-gray-200 mx-3 rounded-full overflow-hidden mb-2"
      >
        <div
          class="h-full rounded-full bg-gray-400"
        />
      </div>
      <div
        class="flex flex-wrap gap-1 p-2 min-h-[60px] content-start"
      />
      <p
        class="text-center text-xs text-gray-400 pb-2"
      >
        0
         item
        s
      </p>
    </div>
    <div
      class="flex-1 flex flex-col rounded-2xl border-2 border-blue-300 bg-blue-50 overflow-hidden"
    >
      <div
        class="flex items-center justify-center gap-1 py-2 text-sm font-semibold text-gray-700"
      >
        <span>
          ♻️
        </span>
        <span>
          Recycling
        </span>
      </div>
      <div
        class="relative h-2 bg-gray-200 mx-3 rounded-full overflow-hidden mb-2"
      >
        <div
          class="h-full rounded-full bg-blue-400"
        />
      </div>
      <div
        class="flex flex-wrap gap-1 p-2 min-h-[60px] content-start"
      />
      <p
        class="text-center text-xs text-gray-400 pb-2"
      >
        0
         item
        s
      </p>
    </div>
    <div
      class="flex-1 flex flex-col rounded-2xl border-2 border-green-300 bg-green-50 overflow-hidden"
    >
      <div
        class="flex items-center justify-center gap-1 py-2 text-sm font-semibold text-gray-700"
      >
        <span>
          🌱
        </span>
        <span>
          Compost
        </span>
      </div>
      <div
        class="relative h-2 bg-gray-200 mx-3 rounded-full overflow-hidden mb-2"
      >
        <div
          class="h-full rounded-full bg-green-400"
        />
      </div>
      <div
        class="flex flex-wrap gap-1 p-2 min-h-[60px] content-start"
      />
      <p
        class="text-center text-xs text-gray-400 pb-2"
      >
        0
         item
        s
      </p>
    </div>
  </div>
</div>
`;

exports[`VirtualTrashcan snapshots > renders multiple items in the same bin 1`] = `
<div>
  <div
    class="flex gap-3 w-full"
  >
    <div
      class="flex-1 flex flex-col rounded-2xl border-2 border-gray-300 bg-gray-50 overflow-hidden"
    >
      <div
        class="flex items-center justify-center gap-1 py-2 text-sm font-semibold text-gray-700"
      >
        <span>
          🗑️
        </span>
        <span>
          Trash
        </span>
      </div>
      <div
        class="relative h-2 bg-gray-200 mx-3 rounded-full overflow-hidden mb-2"
      >
        <div
          class="h-full rounded-full bg-gray-400"
        />
      </div>
      <div
        class="flex flex-wrap gap-1 p-2 min-h-[60px] content-start"
      />
      <p
        class="text-center text-xs text-gray-400 pb-2"
      >
        0
         item
        s
      </p>
    </div>
    <div
      class="flex-1 flex flex-col rounded-2xl border-2 border-blue-300 bg-blue-50 overflow-hidden"
    >
      <div
        class="flex items-center justify-center gap-1 py-2 text-sm font-semibold text-gray-700"
      >
        <span>
          ♻️
        </span>
        <span>
          Recycling
        </span>
      </div>
      <div
        class="relative h-2 bg-gray-200 mx-3 rounded-full overflow-hidden mb-2"
      >
        <div
          class="h-full rounded-full bg-blue-400"
        />
      </div>
      <div
        class="flex flex-wrap gap-1 p-2 min-h-[60px] content-start"
      >
        <button
          class="w-8 h-8 rounded-full bg-white shadow flex items-center justify-center text-base hover:scale-110 transition-transform"
          title="Bottle"
        >
          ♻️
        </button>
        <button
          class="w-8 h-8 rounded-full bg-white shadow flex items-center justify-center text-base hover:scale-110 transition-transform"
          title="Can"
        >
          ♻️
        </button>
      </div>
      <p
        class="text-center text-xs text-gray-400 pb-2"
      >
        2
         item
        s
      </p>
    </div>
    <div
      class="flex-1 flex flex-col rounded-2xl border-2 border-green-300 bg-green-50 overflow-hidden"
    >
      <div
        class="flex items-center justify-center gap-1 py-2 text-sm font-semibold text-gray-700"
      >
        <span>
          🌱
        </span>
        <span>
          Compost
        </span>
      </div>
      <div
        class="relative h-2 bg-gray-200 mx-3 rounded-full overflow-hidden mb-2"
      >
        <div
          class="h-full rounded-full bg-green-400"
        />
      </div>
      <div
        class="flex flex-wrap gap-1 p-2 min-h-[60px] content-start"
      />
      <p
        class="text-center text-xs text-gray-400 pb-2"
      >
        0
         item
        s
      </p>
    </div>
  </div>
</div>
`;

exports[`VirtualTrashcan snapshots > renders three bins with correct item counts 1`] = `
<div>
  <div
    class="flex gap-3 w-full"
  >
    <div
      class="flex-1 flex flex-col rounded-2xl border-2 border-gray-300 bg-gray-50 overflow-hidden"
    >
      <div
        class="flex items-center justify-center gap-1 py-2 text-sm font-semibold text-gray-700"
      >
        <span>
          🗑️
        </span>
        <span>
          Trash
        </span>
      </div>
      <div
        class="relative h-2 bg-gray-200 mx-3 rounded-full overflow-hidden mb-2"
      >
        <div
          class="h-full rounded-full bg-gray-400"
        />
      </div>
      <div
        class="flex flex-wrap gap-1 p-2 min-h-[60px] content-start"
      >
        <button
          class="w-8 h-8 rounded-full bg-white shadow flex items-center justify-center text-base hover:scale-110 transition-transform"
          title="Chip bag"
        >
          🗑️
        </button>
      </div>
      <p
        class="text-center text-xs text-gray-400 pb-2"
      >
        1
         item
      </p>
    </div>
    <div
      class="flex-1 flex flex-col rounded-2xl border-2 border-blue-300 bg-blue-50 overflow-hidden"
    >
      <div
        class="flex items-center justify-center gap-1 py-2 text-sm font-semibold text-gray-700"
      >
        <span>
          ♻️
        </span>
        <span>
          Recycling
        </span>
      </div>
      <div
        class="relative h-2 bg-gray-200 mx-3 rounded-full overflow-hidden mb-2"
      >
        <div
          class="h-full rounded-full bg-blue-400"
        />
      </div>
      <div
        class="flex flex-wrap gap-1 p-2 min-h-[60px] content-start"
      >
        <button
          class="w-8 h-8 rounded-full bg-white shadow flex items-center justify-center text-base hover:scale-110 transition-transform"
          title="Aluminum can"
        >
          ♻️
        </button>
      </div>
      <p
        class="text-center text-xs text-gray-400 pb-2"
      >
        1
         item
      </p>
    </div>
    <div
      class="flex-1 flex flex-col rounded-2xl border-2 border-green-300 bg-green-50 overflow-hidden"
    >
      <div
        class="flex items-center justify-center gap-1 py-2 text-sm font-semibold text-gray-700"
      >
        <span>
          🌱
        </span>
        <span>
          Compost
        </span>
      </div>
      <div
        class="relative h-2 bg-gray-200 mx-3 rounded-full overflow-hidden mb-2"
      >
        <div
          class="h-full rounded-full bg-green-400"
        />
      </div>
      <div
        class="flex flex-wrap gap-1 p-2 min-h-[60px] content-start"
      >
        <button
          class="w-8 h-8 rounded-full bg-white shadow flex items-center justify-center text-base hover:scale-110 transition-transform"
          title="Banana peel"
        >
          🌱
        </button>
      </div>
      <p
        class="text-center text-xs text-gray-400 pb-2"
      >
        1
         item
      </p>
    </div>
  </div>
</div>
`;
